update Docker file