@@ -13,8 +13,6 @@ COPY build/libs/claim-store.jar /opt/app/
 
 EXPOSE 4400
 CMD [ \
-    "--add-modules", "java.se", \
-    "--add-exports", "java.base/jdk.internal.ref=ALL-UNNAMED", \
     "--add-opens", "java.base/java.lang=ALL-UNNAMED", \
     "--add-opens", "java.base/java.nio=ALL-UNNAMED", \
     "--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED", \
